shortest path. new layered structure change. cont.